--- a/QuantumultX/Cym_Script.conf
+++ b/QuantumultX/Cym_Script.conf
@@ -1,11 +1,14 @@
-hostname= www.google.*, m.weibo.cn, www.zhihu.com, zhuanlan.zhihu.com, weather-data.apple.com, trade-acs.m.taobao.com, api.m.jd.com, xeq1kjnhr.m.jd.com, draw.jdfcloud.com, *.m.jd.com, testflight.apple.com, www.zhihu.com, zhuanlan.zhihu.com, *.amemv.com, aweme.snssdk.com,
+hostname= testflight.apple.com, www.google.*, m.weibo.cn, www.zhihu.com, zhuanlan.zhihu.com, trade-acs.m.taobao.com, api.m.jd.com, *.m.jd.com, account.wps.*,
 
 # TF 国区下载修正
 ^https?:\/\/testflight\.apple\.com\/v2\/accounts\/.*\/apps\/\d*\/builds\/\d*\/install url request-body storefrontId" : ".*", request-body storefrontId" : "143441-1,29",
+
 # google 翻页 (senku)
 https?:\/\/www\.google\.([a-z.]*)\/search.*(?<!start=\d{2}|\d{3})$ url script-response-body https://raw.githubusercontent.com/id77/QuantumultX/master/Script/endless.js
+
 # 微博网页跳转登陆屏蔽
 https://m\.weibo\.cn/comments/hotflow.*max_id=.* url reject-dict
+
 # 知乎（部分替换为手机百度 Quark 的 User-Agent）
 # 可以看楼层回复 1-2 条
 ^https:\/\/www\.zhihu\.com\/ url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 14_0 like Mac OS X) AppleWebKit/601.1.46 (KHTML, like Gecko) Version/9.0 Mobile/13B143 Safari/601.1 Quark/604.1 T7/10.7 SearchCraft/2.7.7 (Baidu; P1 9.0.0)$2
@@ -13,29 +16,27 @@ https://m\.weibo\.cn/comments/hotflow.*max_id=.* url reject-dict
 ^https://www\.zhihu\.com/question/ url script-response-body https://raw.githubusercontent.com/id77/QuantumultX/master/Script/zhihu.js
 ^https://zhuanlan\.zhihu\.com/p/ url script-response-body https://raw.githubusercontent.com/id77/QuantumultX/master/Script/zhihu.js
 
-
-
-# 彩云天气 获取定位
-https:\/\/weather-data\.apple\.com url script-request-header https://raw.githubusercontent.com/Peng-YM/QuanX/master/Tasks/caiyun.js
 # 淘宝历史价格
 ^http://.+/amdc/mobileDispatch url script-request-body https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
 ^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
+
 # 京东历史价格
 ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig|lite_wareBusiness) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js
-# 京东活动
-https://.*\.m\.jd\.com/.*\.html url script-response-body https://raw.githubusercontent.com/id77/QuantumultX/master/Script/jd_hd.js
 
-# 知乎网页去广告&推荐列表
-https://www\.zhihu\.com/api/v4/questions/\d+/related-readings url reject-200
-https://www\.zhihu\.com/api/v4/answers/\d+/related-readings url reject-200
-https://www\.zhihu\.com/api/v4/hot_recommendation url reject-200
-https://www\.zhihu\.com/commercial_api/banners_v3/mobile_banner url reject-200
-https://zhuanlan\.zhihu\.com/api/articles/\d+/recommendation url reject-200
-# 韩剧TV去除开屏广告
-^http:\/\/api\.hanju\.koudaibaobao\.com\/api\/carp\/kp.*? url reject
+# WPS (By eHpo)
+^https://account.wps.*/api/users/ url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Wps.js
 
-# 抖音去广告去水印 (By Choler)
-# start ==============================>
-^https?:\/\/.+?\.amemv\.com\/aweme\/v[2-9]+?(\/[^comment].*) url request-header ^GET \/aweme\/v[2-9]+?(\/.+\r\n) request-header GET /aweme/v1$1
-^https?:\/\/.*\.amemv\.com\/aweme\/v1\/(feed|mix\/aweme|aweme\/post|(multi\/)?aweme\/detail|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list)\/ url script-response-body https://raw.githubusercontent.com/Choler/Surge/master/Script/douyin.js
-#  <============================== end
+# 彩云天气 Vip
+^https:\/\/biz\.caiyunapp\.com\/v2\/user\?app_name\=weather url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/ColorWeather.js
+
+# 扫描全能王 pro
+^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/CamScanner.js
+
+#百度云倍速播放
+https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/BaiduCloud.js
+
+# 彩云小译   (by @superuv)
+^https:\/\/api\.interpreter\.caiyunai\.com\/v1\/user url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/cyxy.js
+
+#联通营业厅 去轮播广告 (By Wangsc1)
+^https?://m.client.10010.com/uniAdmsInterface/getHomePageAd url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/china_unicom.js
