--- a/QuantumultX/Cym_Script.conf
+++ b/QuantumultX/Cym_Script.conf
@@ -1,4 +1,4 @@
-hostname= testflight.apple.com, www.google.*, m.weibo.cn, www.zhihu.com, zhuanlan.zhihu.com, trade-acs.m.taobao.com, api.m.jd.com, *.m.jd.com, account.wps.*,
+hostname= testflight.apple.com, www.google.*, m.weibo.cn, www.zhihu.com, zhuanlan.zhihu.com, trade-acs.m.taobao.com, api.m.jd.com, *.m.jd.com, account.wps.*, biz.caiyunapp.com, ap*.intsig.net, pan.baidu.com, m.client.10010.com
 
 # TF 国区下载修正
 ^https?:\/\/testflight\.apple\.com\/v2\/accounts\/.*\/apps\/\d*\/builds\/\d*\/install url request-body storefrontId" : ".*", request-body storefrontId" : "143441-1,29",
@@ -34,9 +34,6 @@ https://m\.weibo\.cn/comments/hotflow.*max_id=.* url reject-dict
 
 #百度云倍速播放
 https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/BaiduCloud.js
-
-# 彩云小译   (by @superuv)
-^https:\/\/api\.interpreter\.caiyunai\.com\/v1\/user url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/cyxy.js
 
 #联通营业厅 去轮播广告 (By Wangsc1)
 ^https?://m.client.10010.com/uniAdmsInterface/getHomePageAd url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/china_unicom.js
