--- a/QuantumultX/Cym_Script.conf
+++ b/QuantumultX/Cym_Script.conf
@@ -1,20 +1,10 @@
-hostname= testflight.apple.com, www.google.*, m.weibo.cn, www.zhihu.com, zhuanlan.zhihu.com, trade-acs.m.taobao.com, api.m.jd.com, *.m.jd.com, account.wps.*, biz.caiyunapp.com, ap*.intsig.net, pan.baidu.com, m.client.10010.com
+hostname= testflight.apple.com, www.google.*, m.weibo.cn, trade-acs.m.taobao.com, api.m.jd.com, *.m.jd.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, account.wps.*, mp.weixin.qq.com, pan.baidu.com, m.client.10010.com
 
 # TF 国区下载修正
 ^https?:\/\/testflight\.apple\.com\/v2\/accounts\/.*\/apps\/\d*\/builds\/\d*\/install url request-body storefrontId" : ".*", request-body storefrontId" : "143441-1,29",
 
 # google 翻页 (senku)
 https?:\/\/www\.google\.([a-z.]*)\/search.*(?<!start=\d{2}|\d{3})$ url script-response-body https://raw.githubusercontent.com/id77/QuantumultX/master/Script/endless.js
-
-# 微博网页跳转登陆屏蔽
-https://m\.weibo\.cn/comments/hotflow.*max_id=.* url reject-dict
-
-# 知乎（部分替换为手机百度 Quark 的 User-Agent）
-# 可以看楼层回复 1-2 条
-^https:\/\/www\.zhihu\.com\/ url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 14_0 like Mac OS X) AppleWebKit/601.1.46 (KHTML, like Gecko) Version/9.0 Mobile/13B143 Safari/601.1 Quark/604.1 T7/10.7 SearchCraft/2.7.7 (Baidu; P1 9.0.0)$2
-# 知乎直接看
-^https://www\.zhihu\.com/question/ url script-response-body https://raw.githubusercontent.com/id77/QuantumultX/master/Script/zhihu.js
-^https://zhuanlan\.zhihu\.com/p/ url script-response-body https://raw.githubusercontent.com/id77/QuantumultX/master/Script/zhihu.js
 
 # 淘宝历史价格
 ^http://.+/amdc/mobileDispatch url script-request-body https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
@@ -23,17 +13,18 @@ https://m\.weibo\.cn/comments/hotflow.*max_id=.* url reject-dict
 # 京东历史价格
 ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig|lite_wareBusiness) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js
 
+# 去微博应用内广告 (By yichahucha)
+^https?://(sdk|wb)app.uve.weibo.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
+^https?://m?api.weibo.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/photos/pic_recommend_status|video/tiny_stream_video_list) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js
+
 # WPS (By eHpo)
 ^https://account.wps.*/api/users/ url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Wps.js
 
-# 彩云天气 Vip
-^https:\/\/biz\.caiyunapp\.com\/v2\/user\?app_name\=weather url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/ColorWeather.js
+# 去微信公众号广告 (By Choler)
+^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
 
-# 扫描全能王 pro
-^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/CamScanner.js
-
-#百度云倍速播放
+# 百度云倍速播放
 https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/BaiduCloud.js
 
-#联通营业厅 去轮播广告 (By Wangsc1)
+# 联通营业厅 去轮播广告 (By Wangsc1)
 ^https?://m.client.10010.com/uniAdmsInterface/getHomePageAd url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/china_unicom.js
