--- a/QuantumultX/Cym_GetCookie.conf
+++ b/QuantumultX/Cym_GetCookie.conf
@@ -1,4 +1,4 @@
-hostname = api.m.jd.com, account.huami.com
+hostname = api.m.jd.com, account.huami.com, api.weibo.cn, pay.sc.weibo.com
 
 
 # > 京东获取Cookie
@@ -6,3 +6,8 @@ https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-reques
 
 # 小米运动获取Token
 ^https:\/\/account\.huami\.com\/v2\/client\/login url script-response-body https://raw.githubusercontent.com/Cym430/Script/master/QuantumultX/xmSports.js
+
+# 微博获取cookie
+https:\/\/api\.weibo\.cn\/\d\/video\/machine\?gsid url script-request-header https://raw.githubusercontent.com/Cym430/Script/master/QuantumultX/weibo.js
+# 钱包签到Cookie
+https:\/\/pay\.sc\.weibo\.com\/aj\/mobile\/home\/welfare\/signin\/do\? url script-request-header https://raw.githubusercontent.com/Cym430/Script/master/QuantumultX/weibo.js
