--- a/QuantumultX/Cym_Script.conf
+++ b/QuantumultX/Cym_Script.conf
@@ -1,4 +1,4 @@
-hostname= testflight.apple.com, www.google.*, m.weibo.cn, trade-acs.m.taobao.com, api.m.jd.com, *.m.jd.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, api.bilibili.com, ap?.bilibili.com, account.wps.*, mp.weixin.qq.com, pan.baidu.com, m.client.10010.com
+hostname= testflight.apple.com, www.google.*, m.weibo.cn, trade-acs.m.taobao.com, api.m.jd.com, *.m.jd.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, api.bilibili.com, account.wps.*, mp.weixin.qq.com, pan.baidu.com, m.client.10010.com
 
 # TF 国区下载修正
 ^https?:\/\/testflight\.apple\.com\/v2\/accounts\/.*\/apps\/\d*\/builds\/\d*\/install url request-body storefrontId" : ".*", request-body storefrontId" : "143441-1,29",
@@ -19,11 +19,6 @@ https?:\/\/www\.google\.([a-z.]*)\/search.*(?<!start=\d{2}|\d{3})$ url script-re
 
 #哔哩哔哩1080P+ (By Nobyda)
 https:\/\/ap(p|i)\.bilibili\.com\/((pgc\/player\/api\/playurl)|(x\/v2\/account\/myinfo\?)|(x\/v2\/account/mine\?)) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/bilifj.js
-
-# 哔哩哔哩港澳台番剧自动切换地区
-^https:\/\/ap(p|i)\.bilibili\.com\/(pgc\/view\/(v\d\/)?app|x(\/v\d)?\/view\/video)\/(season|online)\?access_key url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bili_Auto_Regions.js
-#可选, 适用于搜索指定地区的番剧
-^https:\/\/app\.bilibili\.com\/x\/v\d\/search(\/type)?\?.+?%20(%E6%B8%AF|%E5%8F%B0|%E4%B8%AD)& url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bili_Auto_Regions.js
 
 # WPS (By eHpo)
 ^https://account.wps.*/api/users/ url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Wps.js
