--- a/QuantumultX/Cym_Script.conf
+++ b/QuantumultX/Cym_Script.conf
@@ -1,17 +1,10 @@
-hostname= testflight.apple.com, www.google.*, m.weibo.cn, trade-acs.m.taobao.com, api.m.jd.com, *.m.jd.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, api.bilibili.com, account.wps.*, mp.weixin.qq.com, pan.baidu.com, m.client.10010.com
+hostname= testflight.apple.com, www.google.*, m.weibo.cn, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, api.bilibili.com, account.wps.*, mp.weixin.qq.com, pan.baidu.com, m.client.10010.com
 
 # TF 国区下载修正
 ^https?:\/\/testflight\.apple\.com\/v2\/accounts\/.*\/apps\/\d*\/builds\/\d*\/install url request-body storefrontId" : ".*", request-body storefrontId" : "143441-1,29",
 
 # google 翻页 (senku)
 https?:\/\/www\.google\.([a-z.]*)\/search.*(?<!start=\d{2}|\d{3})$ url script-response-body https://raw.githubusercontent.com/id77/QuantumultX/master/Script/endless.js
-
-# 淘宝历史价格
-^http://.+/amdc/mobileDispatch url script-request-body https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
-^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
-
-# 京东历史价格
-^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/JDHelloWorld/jd_price/main/jd_price.js
 
 # 去微博应用内广告 (By yichahucha)
 ^https?://(sdk|wb)app.uve.weibo.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
