--- a/QuantumultX/Cym_Script.conf
+++ b/QuantumultX/Cym_Script.conf
@@ -1,4 +1,4 @@
-hostname= testflight.apple.com, www.google.*, m.weibo.cn, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, api.bilibili.com, account.wps.*, mp.weixin.qq.com, pan.baidu.com, m.client.10010.com
+hostname= testflight.apple.com, www.google.*, m.weibo.cn, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, api.bilibili.com, account.wps.*, mp.weixin.qq.com, pan.baidu.com
 
 # TF 国区下载修正
 ^https?:\/\/testflight\.apple\.com\/v2\/accounts\/.*\/apps\/\d*\/builds\/\d*\/install url request-body storefrontId" : ".*", request-body storefrontId" : "143441-1,29",
@@ -22,5 +22,3 @@ https:\/\/ap(p|i)\.bilibili\.com\/((pgc\/player\/api\/playurl)|(x\/v2\/account\/
 # 百度云倍速播放
 https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/BaiduCloud.js
 
-# 联通营业厅 去轮播广告 (By Wangsc1)
-^https?://m.client.10010.com/uniAdmsInterface/getHomePageAd url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/china_unicom.js
